--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.jobjects</groupId>
-	<artifactId>mail</artifactId>
+	<artifactId>dbmail</artifactId>
 	<version>1.0.0</version>
 	<packaging>jar</packaging>
 	<name>Sendmail like senmail linux command but in java</name>
